--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "authentication",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "fixonest.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon fixonest.js"
+    "start": "nodemon fixonest.js",
+    "build": "react-scripts build",
+    "dev": "react-scripts start"
   },
   "keywords": [],
   "author": "",
